--- a/src/main/resources/application-oauth.properties
+++ b/src/main/resources/application-oauth.properties
@@ -1,3 +1,18 @@
+# google
 spring.security.oauth2.client.registration.google.client-id=GoogleClientID
 spring.security.oauth2.client.registration.google.client-secret=GoogleClientPassword
 spring.security.oauth2.client.registration.google.scope=profile,email
+
+# naver
+## registration
+spring.security.oauth2.client.registration.naver.client-id=ClientID
+spring.security.oauth2.client.registration.naver.client-secret=ClientSecret
+spring.security.oauth2.client.registration.naver.redirect-uri={baseUrl}/{action}/oauth2/code/{registrationId}
+spring.security.oauth2.client.registration.naver.authorization-grant-type=authorization-code
+spring.security.oauth2.client.registration.naver.scope=name,email,profile_image
+spring.security.oauth2.client.registration.naver.client-name=Naver
+## provider
+spring.security.oauth2.client.provider.naver.authorization-uri=https://nid.naver.com/oauth2.0/authorize
+spring.security.oauth2.client.provider.naver.token-uri=https://nid.naver.com/oauth2.0/token
+spring.security.oauth2.client.provider.naver.user-info-uri=https://openapi.naver.com/v1/nid/me
+spring.security.oauth2.client.provider.naver.user-name-attribute=response
