Change Underscore To Hyphen

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ deploy:
     skip_cleanup: true
     acl: private # zip 파일 접근: private
     local_dir: deploy # before_deploy에서 만든 폴더
-    wait_until_deployed : true
+    wait-until-deployed: true
 
 # CI 실행 완료 시 메일로 알람
 notifications:
