Edit Value of Property 'key'

--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,7 @@ deploy:
     access_key_id: $AWS_ACCESS_KEY # Travis CI ACCESS_KEY 변수명
     secret_access_key: $AWS_SECRET_KEY # Travis CI SECRET_KEY 변수명
     bucket: community-spring-build
-    key: community-with-spring-boot.zip
+    key: learning-spring-boot.zip # 압축한 배포 파일
     bundle_type: zip
     application: community-with-spring-boot
     deployment_group: community-with-spring-boot-group
