--- a/.travis.yml
+++ b/.travis.yml
@@ -18,9 +18,13 @@ before_install:
 script: "./gradlew clean build"
 
 before_deploy:
-  - zip -r learning-spring-boot *
-  - mkdir -p deploy
-  - mv learning-spring-boot.zip deploy/learning-spring-boot.zip
+  - mkdir -p before-deploy
+  - cp scripts/*.sh before-deploy/
+  - cp appspec.yml before-deploy/
+  - cp build/libs/*.jar before-deploy/
+  - cd before-deploy && zip -r before-deploy *
+  - cd ../ && mkdir -p deploy
+  - mv before-deploy/before-deploy.zip deploy/learning-spring-boot.zip
 
 deploy:
   - provider: s3
